--- a/platforms/ios/www/templates/rate.html
+++ b/platforms/ios/www/templates/rate.html
@@ -9,6 +9,7 @@
     <div id="home-filters">
         <div id="category-filter"></div>
         <div id="activity-filter"></div>
+        <div id="want-to-filter">Want-To</div>
         <img src="images/discovery/fabButton.png">
     </div>
 </div>
