--- a/platforms/ios/www/templates/rate.html
+++ b/platforms/ios/www/templates/rate.html
@@ -7,10 +7,11 @@
         </div>
     </div>
     <div id="home-filters">
-        <div id="category-filter"></div>
-        <div id="activity-filter"></div>
-        <div id="want-to-filter">Want-To</div>
-        <img src="images/discovery/fabButton.png">
+        <div id="category-filter" class="filter-div"></div>
+        <div id="activity-filter" class="filter-div"></div>
+        <div id="fancy-button"></div>
+        <div id="want-to-filter" class="filter-div"></div>
+        <div id="profile-footer"></div>
     </div>
 </div>
 <%= APP.load("fabricMenu") %>
