--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -1195,14 +1195,15 @@ input.slider-search-form {
 }
 
 #home-filters div::after {
-    background-position: 25px 4px;
+    background-position: 25px 2px;
     background-repeat: no-repeat;
     text-transform: capitalize;
-    background-size: 31px;
+    background-size: 21px;
     position: absolute;
     text-align: center;
     border-radius: 4px;
-    line-height: 500%;
+    font-size: 14px;
+    line-height: 400%;
     color: white;
     width: 100%;
     height: 93%; 
@@ -1220,8 +1221,8 @@ input.slider-search-form {
 }
 div#fancy-button::after {
     background-image: url(../images/discovery/fabButton.png);
+    background-size: 75% !important;
     background-position: center;
-    background-size: 75%;
     content: "";
 }
 #want-to-filter::after {
