--- a/platforms/ios/www/css/main-5.5-inch.css
+++ b/platforms/ios/www/css/main-5.5-inch.css
@@ -206,7 +206,10 @@ h6.like-you + .action {
     background-size: 414px 736px;
 }
 #home-filters div::after{
-    background-position: 30px;
+    background-position-x: 30px;
+}
+div#fancy-button::after {
+    background-position: center;
 }
 #coach-section div,
 #home-filters div {
