--- a/platforms/ios/www/css/main-5.5-inch.css
+++ b/platforms/ios/www/css/main-5.5-inch.css
@@ -210,6 +210,7 @@ h6.like-you + .action {
 }
 div#fancy-button::after {
     background-position: center;
+    background-size: 60% !important;
 }
 #coach-section div,
 #home-filters div {
