--- a/platforms/ios/www/templates/recommendedPerson.html
+++ b/platforms/ios/www/templates/recommendedPerson.html
@@ -17,6 +17,6 @@ var profilePicture = "https://graph.facebook.com/"+person.facebookID+"/picture?h
 		<div class="incommon-info">
 			<div class="poster" style="background-image: url(<%= Api.appSettings.cdn %><%= person.poster_thumbnail_path.replace('/files', '') %>)"></div>
 			<p class="incommon-title"><%= person.title %></p>
-			<p class="mutual-interest">+<%= person.inCommon %> Mutual Interest</p>
+			<p class="mutual-interest">+<%= person.inCommon %> Mutual Interests</p>
 		</div>
 	</div>
