--- a/platforms/ios/www/templates/searchStatusUpdate.html
+++ b/platforms/ios/www/templates/searchStatusUpdate.html
@@ -1,6 +1,5 @@
-<p id='search-head'>Ask a question about...</p>
 <form id="status-update-search">
-	<input id='status-update-input' type='text' placeholder='Search for a title of a movie, show, etc.'>
+	<input id='status-update-input' type='text' placeholder='Pick a movie, TV show, song etc'>
 </form>
 <div id="search-wrapper">
 	<div id="search-results"></div>
