--- a/platforms/ios/www/templates/homeHeader.html
+++ b/platforms/ios/www/templates/homeHeader.html
@@ -11,6 +11,7 @@
 
 <nav>
 	<div id="scroll-top"></div>
+    <img src="../images/discovery/addIcon.png" />
     <h1>
         <%= title %>
         <span id="current-icon" class="<%= label %>"></span>
