--- a/platforms/ios/www/templates/homeHeader.html
+++ b/platforms/ios/www/templates/homeHeader.html
@@ -11,11 +11,11 @@
 
 <nav>
 	<div id="scroll-top"></div>
-    <img src="../images/discovery/addIcon.png" />
     <h1>
         <%= title %>
         <span id="current-icon" class="<%= label %>"></span>
     </h1>
+    <img id="tap-menu" src="images/discovery/addIcon.png" />
 
     <% if(editButton) { %>
         <span id="header-edit-button">Edit</span>
