beginning of sort on want to

--- a/platforms/ios/www/templates/activityFeed.html
+++ b/platforms/ios/www/templates/activityFeed.html
@@ -140,7 +140,7 @@
                         <div class="action" data-actorid="<%= item.userID %>">
                             <p class="action-content">
                                 <%= item.data.actorName %> 
-                                <span>also <%= item.data.verb %></span>
+                                <span> <%= item.data.verb %></span>
                                 <%= item.data.objectName %>
                             </p>
                         </div>
