--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -329,15 +329,15 @@ header nav #share-icon,
 header nav #chat-menu {
     right: 0;
     background-image: url(../images/discovery/chat.png);
-    background-size: 22px 22px;
+    background-size: 20px;
     background-position: 7px 15px;
 }
 header nav #shopping-cart,
 header nav #notifications-menu {
     right: 35px;
     background-image: url(../images/discovery/notifications.png);
-    background-size: 23px 23px;
-    background-position: 7px 15px;
+    background-size: 16px;
+    background-position: 12px 15px;
 }
 header nav #shopping-cart {
     background-image: url(../images/discovery/cart.png);
@@ -378,10 +378,10 @@ header nav #notifications-menu #notifications-num {
 .messages #chat-num { display: none !important; }
 header nav #tap-menu {
     border-radius: 0px;
-    height: 31px;
-    width: 40px;
+    height: 22px;
+    width: 27px;
+    top: 15px;
     left: 10px;
-    top: 5px;
 }
 #friends,
 #dashboard {
@@ -2165,13 +2165,18 @@ div.recommendation.list-item.userChoice .title {
     top: 20%;
 }
 /* ++++++++++++++++++++ SORT ON CHECKIST Q ++++++++++++++++++++ */
+
+#want-to-filters {
+
+}
+#want-to-filters .want-to-filter {
+
+}
 #dashboard #want-to-sort {
-    transition: 200ms bottom ease-in-out;
-    position: absolute;
-    text-align: center;
-    bottom: -290px;
-    top: initial;
-    width: 100%;
+    background-color: white;
+    position: relative;
+    z-index: 2;
+
 }
 #dashboard #want-to-sort.show {
     bottom: 50px;
@@ -2350,14 +2355,6 @@ div.check-list-wrapper div.check-list-item {
 
 /* ++++++++++++++++++++ NEW REC FEED ++++++++++++++++++++ */
 
-#recommendation-filters, #want-to-sort {
-    position: absolute;
-    transition: 200ms top ease-in;
-    background-color: whitesmoke;
-    width: 100%;
-    top: -234px;
-    z-index: 2;
-}
 
 #recommendation-filters.show {
     top: 50px;
@@ -5450,7 +5447,7 @@ button#done {
 #status-poster.poster {
     width: 75px;
     height: 112px;
-    background-size: 75px 112px;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     margin: 15px 10px;
     float: left;
@@ -5517,19 +5514,19 @@ button#done {
     margin-top: 27px;
 }
 .share-icons div {
-    width: 115px;
+    width: 121px;
     padding-right: 30px;
     float: left;
     color: black;
     text-align: right;
     line-height: 45px;
     background-color: white;
+    background-size: 25px;
     background-repeat: no-repeat;
 }
 .share-icons div.twitter {
     background-image: url(../images/socialMedia/twitterOff.png);
     background-position: 30px;
-    background-size: 25px;
     padding-right: 45px;
 }
 .share-icons div.twitter.active {
@@ -5539,7 +5536,6 @@ button#done {
     border-right: 1px solid rgb(209,208,213);
     background-image: url(../images/socialMedia/facebookOff.png);
     background-position: 20px;
-    background-size: 24px;
 }
 .share-icons div.facebook.active {
     background-image: url(../images/socialMedia/facebook.png);
@@ -5599,7 +5595,7 @@ button#done {
 #status-update-input {
     border-radius: 0;
     font-size: 17px;
-    width: 348px;
+    width: 295px;
     border: none;
     padding-bottom: 10px;
     border-bottom: 1px solid lightgray;
