--- a/platforms/ios/www/css/main-ipad.css
+++ b/platforms/ios/www/css/main-ipad.css
@@ -131,10 +131,16 @@
     }
     .share-icons div {
         background-size: 35px;
-        padding-right: 60px;
+        padding-right: 0px;
+        padding-left: 70px;
         line-height: 55px; 
+        text-align: left;
         font-size: 25px;
-        width: 43%;
+        width: 313px;
+    }
+    .share-icons div.twitter {
+        background-position: 20px;
+        padding-right: 0;
     }
 
     input.slider-status-update {
