--- a/platforms/ios/www/templates/wantToSort.html
+++ b/platforms/ios/www/templates/wantToSort.html
@@ -1,2 +1,2 @@
-<% var active = selected ? " active" : ""; %>
-<%= name %><span class='current-filter<%= active %>'></span>
+
+<%= name %><span class='current-filter'></span>
